style.css
/* ... */
.btn.data-download__button {
	display:block;
  width: auto;
  background-color: #4a90e2;
  color: #fff;
  font-size: 14px;
  border: none;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  box-shadow: none;
}

.btn.data-download_button:hover{
	color: #fff;
}

.data-download__size{
	font-size: .75em;
}

.metadata-table-collapse-toggle{
	padding: 1.5em 2em;
	width: 100%;
	border: none;
	font-size: 14px;
	display: block;
	background: #CFD7DD;
	position:relative;
	text-align: left;
	color: #4a90e2;
	margin-top: 20px;
}

.metadata-table-collapse-toggle:after{
	display: block;
	content: attr(data-description);
	color: #343434;
}

.metadata-table-collapse-toggle:before{
	content: "+";
	position: absolute;
	font-size: 3.5em;
	color: white;
	right: 20px;
	top: 34px;
	line-height: 0;
}

.metadata-table-collapse-toggle[aria-expanded="true"]:before{
	content: "–";
}

.metadata-table-container table{
	width: 100%;
	margin-top: 20px;
}

.metadata-table-container table thead{
	background: #6CADC9;
}

.metadata-table-container table thead th{
	color: white;
	font-size: 14px;
	text-align:left;
	padding: 10px 20px;
	font-weight: normal;
}

.metadata-table-container table tbody tr{
	border-bottom: 1px solid #ccc;
}

.metadata-table-container table tbody td{
	font-size: 14px;
	color: #343434;
	padding: 10px 20px;
}



/* Visualization */
#visualization-header {
	background-color: #0a91ab;
}

#market-visualization {
	margin-top: 50px;
}
#visualization-row {
	margin-bottom: 0px;
	padding-bottom: 0px;
}

/* Market Map */
#market-map-header{
	background:#3a3e4b;
}

#most-aired-ads-subheader{
	background: #6cb1d0;
}

#most-aired-ads-subheader h1{
	text-transform: none;
	font-weight: 400;
}

.btn#market-map-show-all {
	display: block;
  width: auto;
  background-color: #3a3e4b;
  color: #fff;
  font-size: 14px;
  border: none;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  box-shadow: none;
  width: 230px;
  float:right;
  margin-top: 10px;
}

#most-aired-ads{
	padding-top: 30px;
}

.most-aired-ad-container{
	margin-bottom: 50px;
}

.most-aired-ad-container .details-container{
	padding: 20px 0 0 0;
}

.most-aired-ad-container .details-container.expanded{
	padding: 20px 20px 70px 20px;
	background: #efefef;
	position:relative;
}

.most-aired-ad-container .details-container.expanded .read-more-cta {
	position:absolute;
	bottom: 0;
	left: 0;
	background: #4a90e2;
	width: 100%;
	text-align:center;
	padding: 15px 0;
}
.most-aired-ad-container .details-container.expanded .read-more-cta a{
	color:white;
}

.most-aired-ad-container p.reference-citation:first-of-type{
	font-weight: 700;
	margin-bottom: 10px;
}

.most-aired-ad-container h3{
	color: #4a90e2;
	font-size: 18px;
	margin-top: 0;
}

.most-aired-ad-container p{
	font-size: 14px;
}

.most-aired-ad-container p:first-of-type{
	margin-bottom: 4px;
}

.video-container{
	width: 100%;
	position: relative;
}

.video-container iframe{
	position:absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

#load-more {
	width: 100%;
	padding: 14px;
	text-align: center;
	font-size: 20px;
	color: #4a90e2;
	border: 1px solid #4a90e2;
	text-transform: uppercase;
	height: 50px;
	margin-bottom: 75px;
	display: none;
}

/* Explore */
.explore-subtitle-row {
  padding: 0px 100px;
  margin-bottom: 40px;
}
.explore-subtitle-row h3 {
  border-bottom: 2px solid #000;
  display: inline-block;
  padding-bottom: 10px;
  margin-bottom: 10px;
  font-size: 36px;
}
.explore-subtitle-row p {
  text-transform: uppercase;
  margin: 0px;
  font-size: 14px;
  line-height: 14px;
}

.tab-pane#candidates, .tab-pane#sponsors, .tab-pane#sponsor-types{
	padding-top: 50px;
}

#home-explore-tabs{
  background: #efefef;
}

#explore-tabs.nav-tabs{
  border-bottom: none;
}

#explore-tabs.nav-tabs > li{
  width: 32%;
  margin-bottom:0;
  float: none;
  display:inline-block;
  vertical-align: bottom;
  text-align:center;
}

#explore-tabs.nav-tabs > li > a{
  border:none;
  background: #efefef;
  color: #3a3e4b;
  text-transform: uppercase;
  border-radius: 0;
  margin-right:0;
}

#explore-tabs.nav-tabs > li.active > a{
  background: #3a3e4b;
  color: white;
}

#candidate-race-pills{
	display: inline-block;
	margin-bottom: 3em;
}

#candidate-race-pills > li + li, #homepage-market-map-pills > li + li{
	margin-left: 0;
}

#candidate-race-pills > li > a, #homepage-market-map-pills > li > a{
	background: #efefef;
	color: #3a3e4b;
	border-radius: 0;
}

#candidate-race-pills > li:first-child > a, #homepage-market-map-pills > li:first-child > a{
	border-bottom-left-radius: 4px;
	border-top-left-radius: 4px;
}

#candidate-race-pills > li:last-child > a, #homepage-market-map-pills > li:last-child > a{
	border-bottom-right-radius: 4px;
	border-top-right-radius: 4px;
}

#candidate-race-pills > li.active > a, #homepage-market-map-pills > li.active > a{
	background: #3a3e4b;
	color: white;
}

.explore-list {
  list-style: none;
  padding: 0px;
  text-align:center;
  /* margin-bottom: 60px;
  height: 200px; */
}

.explore-list:first-child{
  margin-bottom: 0;
}

.explore-list .explore-item{
  text-align: left;
	margin-bottom: 1em;
}

.explore-list .explore-label, .explore-list .explore-bar-container{
  display:inline-block;
  vertical-align: middle;
}

.explore-list .explore-label{
  vertical-align: middle;
  padding-right:1em;
  width: 25%;
  max-width: 300px;
}

.explore-label p{
	font-size: 16px;
	margin-bottom: 0;
}

.explore-list .explore-count{
  position: absolute;
  left: 0;
  top:0;
  padding-left: .5em;
  color: white;
  font-size: 1em;
  z-index:100;
}

.explore-item .explore-bar-container{
  height: 2.25em;
  width: 74%;
  position:relative;
  line-height: 2.25em;
}

.explore-item .explore-bar-container:before{
	content: attr(data-count);
	position: absolute;
	top: 0;
	left: 0;
	padding-left: .5em;
  color: #666;
  font-size: 1em;
}

.candidate-affiliation-group{
	margin-bottom: 50px;
	padding-bottom: 30px;
  border-bottom: 1px solid #eee;
}
/* ... */

